[gd_scene load_steps=46 format=3 uid="uid://j4iau7hya10u"]

[ext_resource type="Script" uid="uid://c1tn6o2ovjrxj" path="res://arena/game.gd" id="1_1ovjp"]
[ext_resource type="PackedScene" uid="uid://cad4krsh3wyd8" path="res://entity/player/PlayerSubmarine.tscn" id="1_05u1r"]
[ext_resource type="Script" uid="uid://bcua7wbucy3t8" path="res://arena/main_camera.gd" id="1_x3x3p"]
[ext_resource type="Shader" uid="uid://corko8ytv0xqw" path="res://entity/player/GodRays.gdshader" id="2_0yfs5"]
[ext_resource type="Texture2D" uid="uid://cbdmdy2uh5gxo" path="res://arena/sky_map.tres" id="2_1ovjp"]
[ext_resource type="PackedScene" uid="uid://d2qplnx88ayhy" path="res://entity/pickup/Pickup.tscn" id="3_m1fsu"]
[ext_resource type="Texture2D" uid="uid://bffu5vs6wteke" path="res://arena/depth_map.tres" id="3_o54ke"]
[ext_resource type="Script" uid="uid://c8yoc788wd6p8" path="res://entity/player/light_rays.gd" id="3_x3x3p"]
[ext_resource type="Resource" uid="uid://dha7wi7lftjpi" path="res://resources/player_state.tres" id="5_8s4g8"]
[ext_resource type="Resource" uid="uid://bi5c8rvnv8ael" path="res://resources/skill_tree.tres" id="6_8s4g8"]
[ext_resource type="PackedScene" uid="uid://bhlx0sw2e3brp" path="res://GUI/elements/skill_tree_panel.tscn" id="8_3ym2b"]
[ext_resource type="PackedScene" uid="uid://bkqiu07ceqvxd" path="res://entity/enemies/piranha_sub/PiranhaSub.tscn" id="8_g07k2"]
[ext_resource type="Script" uid="uid://dj02ya6ts5hg4" path="res://arena/instructons_label.gd" id="10_7jjc4"]
[ext_resource type="Texture2D" uid="uid://bqiuswppe8xfo" path="res://assets/raw/compass.png" id="10_pfw8f"]
[ext_resource type="Shader" uid="uid://xm1vktjo1fbx" path="res://arena/compass_scroll.gdshader" id="10_syall"]
[ext_resource type="Script" uid="uid://btldmjs4n5151" path="res://arena/biom_trigger.gd" id="10_unpcd"]
[ext_resource type="PackedScene" uid="uid://ct3xxersnb86b" path="res://assets/raw/Coral1.fbx" id="10_vcnyp"]
[ext_resource type="PackedScene" uid="uid://ctuj540ev5h5x" path="res://assets/raw/Coral2.fbx" id="11_31no7"]
[ext_resource type="Script" uid="uid://cmbwrkyn4psw7" path="res://arena/compass.gd" id="11_bbfp7"]
[ext_resource type="PackedScene" uid="uid://dtmkpxqwq4yvq" path="res://assets/raw/Coral3.fbx" id="12_unpcd"]
[ext_resource type="PackedScene" uid="uid://dld8het2euiby" path="res://assets/raw/Coral4.fbx" id="13_m8cug"]
[ext_resource type="PackedScene" uid="uid://crkdy0tapoyl6" path="res://assets/raw/Coral5.fbx" id="14_nqrx7"]
[ext_resource type="Script" uid="uid://oujuluo7x3km" path="res://addons/zylann.hterrain/hterrain.gd" id="15_0bjfm"]
[ext_resource type="Script" uid="uid://8xsxi16cxuba" path="res://arena/hud.gd" id="15_8s4g8"]
[ext_resource type="PackedScene" uid="uid://bnfxt8ib5k0iu" path="res://assets/raw/Coral6.fbx" id="15_hoesm"]
[ext_resource type="Texture2D" uid="uid://c7bffe8hm3pcb" path="res://assets/raw/heath.png" id="15_p28hi"]
[ext_resource type="Texture2D" uid="uid://coawo5rec6e1u" path="res://assets/raw/hp.png" id="15_trfv1"]
[ext_resource type="PackedScene" uid="uid://dmcmx62iq8f00" path="res://assets/raw/Coral.fbx" id="16_3r4lv"]
[ext_resource type="Resource" uid="uid://ddg2tqd370pa0" path="res://terrein/data.hterrain" id="16_guibl"]
[ext_resource type="Texture2D" uid="uid://twq3xsi8ywat" path="res://assets/raw/fuel.png" id="16_p28hi"]
[ext_resource type="Texture2D" uid="uid://dsqahgcvn8mvu" path="res://assets/raw/signall.png" id="17_8s4g8"]
[ext_resource type="Texture2D" uid="uid://c4f2dxffsmrus" path="res://assets/raw/hp_over.png" id="17_q3mki"]
[ext_resource type="Script" uid="uid://ck2jfcyega1io" path="res://addons/zylann.hterrain/hterrain_texture_set.gd" id="17_xmuta"]
[ext_resource type="Texture2D" uid="uid://spcu8p4dcyit" path="res://assets/raw/fuel_over.png" id="19_3eua4"]
[ext_resource type="Texture2D" uid="uid://7ohc5rsqrdm8" path="res://assets/raw/signal_overl.png" id="21_loj0u"]
[ext_resource type="Texture2D" uid="uid://dlu8a0nk1oo0q" path="res://assets/raw/poi.png" id="24_m8cug"]
[ext_resource type="Script" uid="uid://ct0yl08ioccxa" path="res://arena/global_state.gd" id="25_q3mki"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_tsql1"]
sky_top_color = Color(3.85046e-07, 0.404074, 0.579226, 1)
sky_horizon_color = Color(0.328597, 0.448317, 0.508163, 1)
sky_energy_multiplier = 0.0
ground_bottom_color = Color(2.10572e-08, 0.0748081, 0.139041, 1)
ground_horizon_color = Color(0.328597, 0.448317, 0.508163, 1)

[sub_resource type="Sky" id="Sky_05u1r"]
sky_material = SubResource("ProceduralSkyMaterial_tsql1")

[sub_resource type="Environment" id="Environment_kre3w"]
background_mode = 2
sky = SubResource("Sky_05u1r")
tonemap_mode = 4
glow_enabled = true
glow_bloom = 0.3
fog_enabled = true
fog_light_color = Color(0, 0.113616, 0.184857, 1)
fog_sun_scatter = 0.05
fog_density = 0.1
fog_sky_affect = 0.98
fog_depth_curve = 0.0824694

[sub_resource type="SphereShape3D" id="SphereShape3D_1jian"]
radius = 49.3508

[sub_resource type="ViewportTexture" id="ViewportTexture_0yfs5"]
viewport_path = NodePath("SubViewportContainer/SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p8eqr"]
resource_local_to_scene = true
shader = ExtResource("2_0yfs5")
shader_parameter/subviewport_tex = SubResource("ViewportTexture_0yfs5")
shader_parameter/ray_length = 1.0
shader_parameter/ray_intensity = 0.4
shader_parameter/light_source_scale = 0.4
shader_parameter/light_source_feather = 2.0
shader_parameter/noise_strength = 0.2
shader_parameter/light_source_pos = Vector2(0, 0)
shader_parameter/light_source_dir = Vector3(0.5, -1, 0.25)
shader_parameter/camera_dir = Vector3(-0.5, 1, -0.25)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nun0l"]
shader = ExtResource("10_syall")
shader_parameter/scroll_offset = 0.0
shader_parameter/fade_width_normalized = 0.1

[sub_resource type="Resource" id="Resource_11wws"]
script = ExtResource("17_xmuta")
mode = 0
textures = [[], []]

[node name="Game" type="Node3D" node_paths=PackedStringArray("environment", "sun")]
script = ExtResource("1_1ovjp")
sky_map = ExtResource("2_1ovjp")
depth_map = ExtResource("3_o54ke")
environment = NodePath("WorldEnvironment")
sun = NodePath("DirectionalLight3D")

[node name="GlobalState" type="Node" parent="." node_paths=PackedStringArray("player") groups=["state"]]
script = ExtResource("25_q3mki")
player_state = ExtResource("5_8s4g8")
skill_tree = ExtResource("6_8s4g8")
player = NodePath("../Player/PlayerSubmarine")

[node name="FxManager" type="Node3D" parent="." groups=["fx_manager"]]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_kre3w")

[node name="Player" type="Marker3D" parent="."]

[node name="PlayerSubmarine" parent="Player" node_paths=PackedStringArray("compass") instance=ExtResource("1_05u1r")]
transform = Transform3D(-0.239652, 0, 0.970859, 0, 1, 0, -0.970859, 0, -0.239652, 0, -29.2519, 0)
compass = NodePath("../../CanvasLayer/MarginContainer/VBoxContainer/Compass")

[node name="Pickups" type="Marker3D" parent="."]

[node name="Pickup" parent="Pickups" instance=ExtResource("3_m1fsu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -6)

[node name="Pickup2" parent="Pickups" instance=ExtResource("3_m1fsu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.4, 3.3, -6)
type = 2
amount = 50

[node name="Enemies" type="Marker3D" parent="."]

[node name="PiranhaSub" parent="Enemies" node_paths=PackedStringArray("patrol_markers") instance=ExtResource("8_g07k2")]
transform = Transform3D(-0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, -0.965926, 0, 2, -17)
patrol_markers = [NodePath("../PatrolRoute/A"), NodePath("../PatrolRoute/A2"), NodePath("../PatrolRoute/A3")]

[node name="PiranhaSub2" parent="Enemies" node_paths=PackedStringArray("patrol_markers") instance=ExtResource("8_g07k2")]
transform = Transform3D(-0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, -0.965926, 8.98847, 11.4517, -14.5948)
patrol_markers = [NodePath("../PatrolRoute/A"), NodePath("../PatrolRoute/A2"), NodePath("../PatrolRoute/A3")]

[node name="PatrolRoute" type="Node3D" parent="Enemies"]

[node name="A" type="Marker3D" parent="Enemies/PatrolRoute"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.7844, 0, -12.4945)

[node name="A2" type="Marker3D" parent="Enemies/PatrolRoute"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.58991, 9.53674e-07, -17.9343)

[node name="A3" type="Marker3D" parent="Enemies/PatrolRoute"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.80686, 7.99509, -38.2799)

[node name="Areas" type="Node3D" parent="."]

[node name="CoralValley" type="Node3D" parent="Areas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.59445, -0.320259, -3.69901)

[node name="Trigger" type="Area3D" parent="Areas/CoralValley"]
collision_layer = 0
collision_mask = 0
monitoring = false
script = ExtResource("10_unpcd")
biom = "Coral Valley"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Areas/CoralValley/Trigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -75.9121, -51.1206, 18.0392)
shape = SubResource("SphereShape3D_1jian")

[node name="Items" type="Node3D" parent="Areas/CoralValley"]

[node name="Coral1" parent="Areas/CoralValley/Items" instance=ExtResource("10_vcnyp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -62.5843, -61.79, 0.415483)

[node name="Coral2" parent="Areas/CoralValley/Items" instance=ExtResource("11_31no7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -92.1794, -48.1554, 1.46783)

[node name="Coral3" parent="Areas/CoralValley/Items" instance=ExtResource("12_unpcd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -82.893, -44.4226, 20.279)

[node name="Coral4" parent="Areas/CoralValley" instance=ExtResource("13_m8cug")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -96.2221, -44.1072, 10.4291)

[node name="Coral5" parent="Areas/CoralValley" instance=ExtResource("14_nqrx7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -47.9403, -55.5161, 13.4469)

[node name="Coral6" parent="Areas/CoralValley" instance=ExtResource("15_hoesm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -55.9136, -53.4915, 17.8218)

[node name="Coral" parent="Areas/CoralValley" instance=ExtResource("16_3r4lv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -69.7784, -46.6526, 24.6535)

[node name="Coral7" parent="Areas/CoralValley" instance=ExtResource("13_m8cug")]
transform = Transform3D(-0.704473, 0, -0.709731, 0, 1, 0, 0.709731, 0, -0.704473, -91.9567, -59.4259, -23.3627)

[node name="Coral3" parent="Areas/CoralValley" instance=ExtResource("12_unpcd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -79.6995, -61.7414, -7.57581)

[node name="Coral2" parent="Areas/CoralValley" instance=ExtResource("11_31no7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -91.6156, -49.9513, -3.65519)

[node name="Coral8" parent="Areas/CoralValley" instance=ExtResource("14_nqrx7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -52.3359, -59.2636, -10.6874)

[node name="Coral1" parent="Areas/CoralValley" instance=ExtResource("10_vcnyp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -65.2958, -55.8664, 13.285)

[node name="Coral9" parent="Areas/CoralValley" instance=ExtResource("14_nqrx7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -81.4863, -53.7002, 8.16469)

[node name="Coral10" parent="Areas/CoralValley" instance=ExtResource("12_unpcd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -69.1033, -43.9174, -34.8703)

[node name="MainCamera" type="Camera3D" parent="."]
current = true
script = ExtResource("1_x3x3p")
easing = 8.0

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="MainCamera"]
remote_path = NodePath("../../SubViewportContainer/SubViewport/PostProcessCamera")
update_scale = false

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LightRays" type="ColorRect" parent="Control"]
material = SubResource("ShaderMaterial_p8eqr")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_x3x3p")
light_path = NodePath("../../DirectionalLight3D")
camera_path = NodePath("../../SubViewportContainer/SubViewport/PostProcessCamera")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
visibility_layer = 0
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_clear_mode = 2
render_target_update_mode = 4

[node name="PostProcessCamera" type="Camera3D" parent="SubViewportContainer/SubViewport"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Compass" type="TextureRect" parent="CanvasLayer/MarginContainer/VBoxContainer" node_paths=PackedStringArray("player")]
material = SubResource("ShaderMaterial_nun0l")
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("10_pfw8f")
script = ExtResource("11_bbfp7")
player = NodePath("../../../../Player/PlayerSubmarine")
poi_icon = ExtResource("24_m8cug")

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DepthLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "-100 m"
horizontal_alignment = 1

[node name="InstructonsLabel" type="Label" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Move: WASD | Roll: E/Q | Boost: Shift | Scan: MMB | Upgrades: I"
script = ExtResource("10_7jjc4")

[node name="HUD" type="Control" parent="CanvasLayer/MarginContainer" node_paths=PackedStringArray("player")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("15_8s4g8")
player = NodePath("../../../Player/PlayerSubmarine")

[node name="HealthProgressBar" type="TextureProgressBar" parent="CanvasLayer/MarginContainer/HUD"]
modulate = Color(1, 1, 1, 0.564)
texture_filter = 1
layout_mode = 2
offset_right = 96.0
offset_bottom = 96.0
size_flags_horizontal = 0
size_flags_vertical = 0
step = 0.01
value = 100.0
fill_mode = 4
texture_under = ExtResource("15_p28hi")
texture_over = ExtResource("17_q3mki")
texture_progress = ExtResource("15_trfv1")
tint_under = Color(1, 0.346577, 0.280009, 1)

[node name="FuelProgressBar" type="TextureProgressBar" parent="CanvasLayer/MarginContainer/HUD/HealthProgressBar"]
texture_filter = 1
layout_mode = 0
offset_left = -5.0
offset_top = -6.0
offset_right = 315.0
offset_bottom = 98.0
step = 0.01
texture_over = ExtResource("19_3eua4")
texture_progress = ExtResource("16_p28hi")

[node name="ScannerProgressBar" type="TextureProgressBar" parent="CanvasLayer/MarginContainer/HUD/HealthProgressBar"]
texture_filter = 1
layout_mode = 1
offset_left = -5.0
offset_top = -8.0
offset_right = 315.0
offset_bottom = 96.0
max_value = 1.0
step = 0.01
texture_over = ExtResource("21_loj0u")
texture_progress = ExtResource("17_8s4g8")

[node name="BiomLabel" type="Label" parent="CanvasLayer/MarginContainer/HUD"]
layout_mode = 0
offset_left = 109.0
offset_top = 47.0
offset_right = 272.0
offset_bottom = 68.0
text = "Biom: Unknown"

[node name="SkillTreePanel" parent="CanvasLayer" instance=ExtResource("8_3ym2b")]
unique_name_in_owner = true
process_mode = 2
visible = false
offset_left = 343.0
offset_top = 170.0
offset_right = -357.0
offset_bottom = -187.0

[node name="HTerrain" type="Node3D" parent="."]
script = ExtResource("15_0bjfm")
centered = true
_terrain_data = ExtResource("16_guibl")
chunk_size = 64
collision_enabled = true
collision_layer = 1
collision_mask = 1
shader_type = "Classic4Lite"
custom_shader = null
custom_globalmap_shader = null
texture_set = SubResource("Resource_11wws")
render_layers = 1
cast_shadow = 1
shader_params/u_ground_uv_scale = 20
shader_params/u_depth_blending = true
shader_params/u_triplanar = null
shader_params/u_tile_reduction = null
metadata/_custom_type_script = "uid://oujuluo7x3km"

[node name="Coral6" parent="." instance=ExtResource("15_hoesm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -45.8215, -50.9366, 32.8581)

[node name="Coral4" parent="." instance=ExtResource("13_m8cug")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -44.6903, -52.8184, -22.2658)

[node name="Coral1" parent="." instance=ExtResource("10_vcnyp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.4713, -58.6398, -7.64949)

[node name="Coral2" parent="." instance=ExtResource("11_31no7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.79591, -35.0941, -6.0238)

[connection signal="visibility_changed" from="CanvasLayer/SkillTreePanel" to="." method="_on_skill_tree_panel_visibility_changed"]
